--- a/app/src/main/res/layout/single_event_layout.xml
+++ b/app/src/main/res/layout/single_event_layout.xml
@@ -38,6 +38,7 @@
             android:textColor="#A1A1A1"
             android:typeface="serif"
             app:layout_constraintEnd_toStartOf="@+id/news_img"
+            app:layout_constraintTop_toBottomOf="@+id/event_title"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
